@@ -2,6 +2,7 @@ Revision history for perl distribution Convos
 
 6.29 Not Released
  - Fix trying to connect if wanted_state is "connected"
+ - Fix "Facts" bot action to only reply if the fact ends with "?"
  - Add more connection states: connecting and disconnecting
  - Add server messages when connections state changes
  - Add "Retry" button to loading screen
